<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPreferencesActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/app_name"
        app:subtitle="Custom filtered news!">
    </androidx.appcompat.widget.Toolbar>

    <CheckBox android:id="@+id/checkbox_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice1"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice2"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice3"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice4"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice5"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice6"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice7"
        android:onClick="onCheckboxClicked"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finalisePreferences"
        android:id="@+id/finalise_preferences"/>



</LinearLayout>